Kubernetes/rainproject-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rainproject-deployment
  labels:
    app: rainproject-api
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: rainproject-api
  template:
    metadata:
      labels:
        app: rainproject-api
    spec:
      containers:
      - name: rainproject
        image: michaelbuton/rainproject_api:1.0
        ports:
        - containerPort: 8000
