Kubernetes/rainproject-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rainproject-ingress
spec:
  defaultBackend:
    service:
      name: rainproject-service
      port:
        number: 8002
